2007-10-26  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in (Darwin):	add support for 64-bit X11.
	* unix/configure:		autoconf-2.13

2007-10-25  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkPlace.c:	Prevent segfault in place geometry manager.
	Thanks to Colin McDonald.  [Bug 1818491]

2007-10-11  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/msgs/hu.msg: Added message catalog for Hungarian.
	[Patch 1800742] (rezso)

2007-10-11  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXWm.c (TkMacOSXGrowToplevel): manually constrain resize
	limitBounds to maxBounds, works around SectRect() mis-feature (return
	zero rect if input rect has zero height/width). [Bug 1810818]

2007-10-02  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bump version number to 8.4.17
	* generic/tk.h:
	* unix/configure.in:	Removed "es_ES" entry in LOCALES
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.13
	* win/configure:

2007-09-18  Daniel Steffen  <das@users.sourceforge.net>

	*** 8.4.16 TAGGED FOR RELEASE ***

	* changes: updates for 8.4.16 release.

2007-09-15  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (SunOS-5.1x): 	replace direct use of '/usr/ccs/bin/ld'
					in SHLIB_LD by 'cc' compiler driver.
	* unix/configure: autoconf-2.13

2007-09-11  Reinhard Max  <max@suse.de>

	* generic/tkImgGIF.c: Fixed a buffer overrun that got triggered by
	multi-frame interlaced GIFs that contain subsequent frames that
	are smaller than the first one.

	* tests/imgPhoto.test: Added a test for the above.

2007-09-11  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in:	backport of TK_INCLUDE_SPEC addition.
	* unix/tkConfig.sh.in:	[Bug 777203]
	* unix/configure: autoconf-2.13

2007-09-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Fix for AMD64 symbols target builds.
	* win/rules.vc:

2007-09-05  Pat Thoyts  <patthoyts@users.sourceforge.net>
